@@ -1,5 +1,3 @@
-/time set day
-/gamerule doDaylightCycle false
 /locate structure minecraft:village_plains
 /tp @s 240 ~ -208
 /gamemode survival
@@ -18,3 +16,35 @@
 /give KCtops6 kubejs:wooden_trowel
 /clear
 /give KCtops6 kubejs:stone_trowel
+/kubejs reload server-scripts
+/reload
+/kubejs errors server
+/kubejs reload server-scripts
+/rle
+/reload
+/kubejs reload server-scripts
+/reload
+/ftbquests editing_mode
+/clear
+/kubejs reload server-scripts
+/reload
+/kubejs errors server
+/kubejs reload server-scripts
+/reload
+/kubejs reload server-scripts
+/reload
+/kubejs reload server-scripts
+/reload
+/kubejs reload server-scripts
+/reload
+/kubejs hand
+/kubejs reload server-scripts
+/reload
+/give KCtops6 gravel
+/give KCtops6 gravel 64
+/kubejs reload server-scripts
+/reload
+/kubejs reload client-scripts
+/clear
+/give KCtops6 kubejs:stone_hammer
+/give KCtops6 gravel
