@@ -1,0 +1,30 @@
+{
+	chapter.17F179085511CF63.title: "Alpha"
+	quest.2271A8EDA3C7F64C.quest_desc: ["&lGravel&r can be more than just a building block—break it with a &lStone Hammer&r to turn it into &lSand&r. Sand opens up new crafting possibilities and resources for survival. Keep smashing gravel to uncover the many uses of sand!"]
+	quest.2271A8EDA3C7F64C.quest_subtitle: "From Gravel to Sand"
+	quest.2271A8EDA3C7F64C.title: "The Sands of Time"
+	quest.3642E2D78B348AE3.quest_desc: ["With a &lStone Trowel&r in hand, gravel becomes more than just a stepping stone—it’s your first source of iron. Sift through gravel to find &lCrushed Raw Iron&r, then smelt it down into a shiny &lIron Ingot&r. With iron, stronger tools and better equipment are within reach!"]
+	quest.3642E2D78B348AE3.quest_subtitle: "Sifting for Strength"
+	quest.3642E2D78B348AE3.title: "Iron Beginnings"
+	quest.40F041C17BEAADEE.quest_desc: ["Without natural stone, you'll need to get creative. Craft a &lWooden Trowel&r and use it to break dirt or grass blocks—this will yield &lStone Pebbles&r. Gather four pebbles and craft them into a &lCobblestone&r block. With cobblestone in hand, sturdier tools and new possibilities await!"]
+	quest.40F041C17BEAADEE.quest_subtitle: "From Dirt to Stone"
+	quest.40F041C17BEAADEE.title: "The First Stones"
+	quest.4FCED4F5C0320523.quest_desc: ["In the world of automation, &lAndesite&r is a crucial resource. Use a &lStone Trowel&r or better to break dirt or grass blocks and gather &lAndesite Pebbles&r. Combine four pebbles to craft Andesite, an essential material for Create’s &lAndesite Alloy&r. Gather wisely—this will be key to your mechanical creations!"]
+	quest.4FCED4F5C0320523.quest_subtitle: "Crafting the Building Blocks"
+	quest.4FCED4F5C0320523.title: "Andesite Essentials"
+	quest.528AC4A13D35951B.quest_desc: ["Sometimes, you need a little extra force to break through. Craft a &lStone Hammer&r, then use it to break cobblestone into &lGravel&r. This simple tool will help you expand your resource pool and provide the materials needed for future advancements. Keep hammering away."]
+	quest.528AC4A13D35951B.quest_subtitle: "Turning Stone into Gravel"
+	quest.528AC4A13D35951B.title: "Hammering the Basics"
+	quest.57401F4BD3952C56.quest_desc: ["In a world without forests, villages are your best source of wood. Chop down trees in a village to gather logs—essential for crafting tools, structures, and more. Make sure to replant saplings when possible to keep resources sustainable!"]
+	quest.57401F4BD3952C56.quest_subtitle: "The Key to Survival"
+	quest.57401F4BD3952C56.title: "Timber!"
+	quest.62DBB6855DF2639C.quest_desc: ["With wood in hand, it's time to craft one of the most important blocks in your journey—the Crafting Table. This essential workstation unlocks countless recipes, allowing you to turn raw materials into tools, building blocks, and more. Simply arrange four wooden planks in your inventory crafting grid to get started!"]
+	quest.62DBB6855DF2639C.quest_subtitle: "Crafting the Basics"
+	quest.62DBB6855DF2639C.title: "Workbench Wonders"
+	quest.6F234337CE289CD4.quest_desc: ["With &lAndesite&r and &lIron&r in hand, it’s time to craft the cornerstone of Create’s mechanical systems—&lAndesite Alloy&r. Combine Andesite with Iron to forge this versatile material. Andesite Alloy will be used in various Create machines, unlocking your potential for automation and advancement."]
+	quest.6F234337CE289CD4.quest_subtitle: "Forging the Andesite Alloy"
+	quest.6F234337CE289CD4.title: "The Heart of Creation"
+	quest.7C42B99D6CD2EB48.quest_desc: ["Your Wooden Trowel was a good start, but a &lStone Trowel&r will serve you even better. With increased durability and improved drops, you'll gather resources more efficiently. Craft one and put it to the test—you might be surprised by what you find!"]
+	quest.7C42B99D6CD2EB48.quest_subtitle: "Improved Gathering"
+	quest.7C42B99D6CD2EB48.title: "A Better Trowel"
+}
