@@ -45,3 +45,5 @@ Ported Farmer's Delight Cutting Board Recipes from Infinite Horizons 1.20.1 (not
 Added Infinite Horizons Pebbles (Stone and Andesite).
 Added Infinite Horizons Wooden and Stone Trowel (for obtaining pebbles).
 Ported Shapeless and Shaped Crafting Recipes for Infinite Horizons 1.20.1 (Obviously not all used yet).
+Added Infinite Horizons Stone Hammer (for early cobbleworks).
+Started Alpha Questline.
